Tests et alignements des éléments pour la partie responsive. Corrections et ajout des derniers éléments de la maquette.

--- a/Style.css
+++ b/Style.css
@@ -51,29 +51,30 @@ padding-right: 35em;
 }
 
 h1 {
-font-size: medium;
+font-size:1.10em;
 line-height: 0.7em;
 }
+
 section{
-    display: flex;
-    flex-wrap: nowrap;
+display: flex;
+flex-wrap: nowrap;
 }
+
 .fa-map-marker-alt {
-    display: flex;
-    flex-wrap: nowrap;
 color: black;
 border-radius: 10px 0px 0px 10px;
-background-color: #deebff;
-padding: 10px;
+background-color:  #f2f2f2;
+padding: 14px;
 }
 
 input {
-color:black;
+font-weight:bold;
 border-radius: 0px 10px 10px 0px;
+border:2px solid #f2f2f2;
 border-color: #f2f2f2;
-padding: 8px;
-margin: 10px;
+padding: 12.5px;
 }
+
 #bouton-search p {
 color: white;
 border-radius: 0px 15px 15px 0px;
@@ -81,6 +82,7 @@ border-color: #f2f2f2;
 padding: 15px;
 background-color: #0065fc;
 }
+
 .fa-search {
 color: transparent;
 }
@@ -88,19 +90,24 @@ color: transparent;
 /*Filtres*/
 
 .span{
-display: flex;
 flex-direction: row;
 flex-wrap: no-wrap;
 justify-content: flex-start;
 }
 .encadrement  {
 
-border-radius: 10px 10px 10px 10px;
+border-radius: 30px 30px 30px 30px;
 border: solid #f2f2f2 0.2em;
 width: 20%;
 padding: 10px;
 margin: 5px;
 }
+
+.encadrement:hover{
+color:lightblue;
+background-color:lightseagreen;
+}
+
 .fa-money-bill-wave {
 color: #0065fc;
 background-color: #deebff;
@@ -113,6 +120,7 @@ border-radius: 50%;
 color: #0065fc;
 background-color: #deebff;
 padding: 12px;
+margin-right: 15px;
 border-radius: 50%;
 }
 
@@ -120,6 +128,7 @@ border-radius: 50%;
 color: #0065fc;
 background-color: #deebff;
 padding: 12px;
+margin-right: 15px;
 border-radius: 50%;
 }
 
@@ -127,6 +136,7 @@ border-radius: 50%;
 color: #0065fc;
 background-color: #deebff;
 padding: 12px;
+margin-right: 15px;
 border-radius: 50%;
 }
 .fa-info-circle {
@@ -136,71 +146,74 @@ border-radius: 60%;
 }
 .fa-chart-line
 {
-    padding-left: 30px;
+padding-left: 30px;
 }
 .fa-star{
-    color:  #0065fc;
+color:  #0065fc;
 }
 .far.fa-star{
-    color:  #f2f2f2;
+color:  #f2f2f2;
 }
 /* MAIN SECTION WITH HOTELS GRID AND POPULAR */
 
-section {
-display: flex;
+/*section {display: flex;}*/
+figcaption{
+font-weight: bold;
+line-height: 1em;
+font-size: 1em;
 }
-
+figcaption p{
+font-weight: normal;
+}
   /* la grille 3x3 au milieu */
 
 .hotel-grid {
 display: flex;
-flex-direction: row;
 flex-wrap: wrap;
-border-radius: 10px 5px 10px 5px;
-border: 1px solid black;
-justify-content: space-around;
-align-items: center;
-align-content: space-between;
+flex-direction: row;
+justify-content:center;
+align-items:center;
+border-radius: 25px 25px 25px 25px;
 background-color: #f2f2f2;
 border: 2px;
 }
 
+/*  width: calc(100% * (1 / 3) - 10px - 1px);*/
 
 .hotel-card {
-  width: calc(100% * (1 / 3) - 10px - 1px);
 background-color: white;
 margin-left: 5px;
-border-radius: 10px 5px 10px 5px;
-border: 1px solid black;
+border-radius: 25px 25px 25px 25px;
 }
 
 /* Hotel card images */
 
 .hotel-card img {
-width:200px;
-height:200px;
-
+width:250px;
+height:150px;
+border-radius: 20px 20px 0px 0px;
 }
 
 #container2 {
-    display: flex;
+display: flex;
 position: relative;
 flex-direction: column;
 flex-wrap: nowrap;
 border: 2px;
 margin-left: 20px;
 padding-top: 20px;
+border-radius: 25px 25px 25px 25px;
 background-color: #f2f2f2;
 }
 
 .hotel-card-popular img {
 margin: 5px;
 background-color: white;
-border-radius: 10px 5px 10px 5px;
-border: 1px solid black;
+border-radius: 25px 0px 0px 25px;
 height: 150px;
 width: 150px;
 }
+
 .container3 {
 display: flex;
 flex-wrap: nowrap;
@@ -214,21 +227,26 @@ margin: auto;
 .card-activity1 img{
 height: 300px;
 width:250px ;
+border-radius: 25px 25px 0px 0px;
 }
 
 .card-activity2 img{
 height: 150px;
-width: 200px;
+width: 250px;
+border-radius: 25px 25px 0px 0px;
 }
 .card-activity3 img{
 
 height: 130px;
-width:200px;
+width:250px;
+border-radius: 25px 25px 0px 0px;
 }
 
 .card-activity4 img{
-    height: 180px;
-    width: 220px;
+height: 180px;
+width: 270px;
+border-radius: 25px 25px 0px 0px;
+
 }
 
 /* FOOTER */
@@ -270,7 +288,7 @@ padding-left: 0;
 width: auto; 
 }
 
-header{
+header {
 display: flex;
 flex-wrap: wrap;
 }
@@ -280,16 +298,12 @@ line-height: 1.2em;
 }
 
 #logo img {
-display: flex;
-flex-wrap: nowrap;
 width: 80px;
 order:1;
 }
 
 .menu1 a  { 
-display: flex;
-flex-wrap: wrap;
-order:3;
+order:2;
 width:50%;
 color: #0065fc;
 border-bottom: 2px solid #0065fc;
@@ -297,25 +311,28 @@ border-top: none;
 }
 
 .menu2 a {
-display: flex;
-flex-wrap: wrap;
-order:4;
+order:3;
 width:50%;
 color: black;
 border-bottom: 2px solid #f2f2f2;
 }
 .menu3 a {
-display: flex;
-flex-wrap: nowrap;
-order:2;
+margin:150px;
+order:4;
 color: #0065fc;
+}
+
+
+input {
+    margin:auto;
 }
 
 
 #bouton-search p {
 color: transparent;
-border-radius: 0px 15px 15px 0px;
-border-color: #f2f2f2;
+border-radius: 10px 10px 10px 10px;
+padding: 0px 7px 0px;
+width: 12%;
 background-color: #0065fc;
 }
 
@@ -323,22 +340,18 @@ background-color: #0065fc;
 color: white;
     }
 
-#bouton-search p {
-border-radius: 10px 10px 10px 10px;
-padding: 10px;
-width: 15%;
-background-color: #0065fc;
-}
-
 .encadrement h4 {
 display: flex;
 flex-wrap: wrap;
-flex-direction: column;
+flex-direction: row;
 border-radius: 10px 10px 10px 10px;
 border: solid #f2f2f2 0.2em;
-width: 10%;
-padding: 10px;
 margin: 5px;
+}
+
+section{
+display:flex;
+flex-wrap: wrap;
 }
 
 .container3 {
@@ -356,8 +369,8 @@ margin: auto;
 .hotel-grid {
 display: flex;
 flex-direction: column;
-flex-wrap: wrap;
 order:2;
+width: auto;
 border-radius: 10px 5px 10px 5px;
 border: 1px solid black;
 align-content: space-between;
@@ -367,20 +380,13 @@ border: 2px;
 
 #container2 {
 display: flex;
+flex-wrap: wrap;
 flex-direction: column;
 order:3;
-flex-wrap: wrap;
 border: 2px;
-margin-left: 20px;
-padding-top: 20px;
 background-color: #f2f2f2;
 }
             
-.container{
-    margin:auto;
-}    
-
-
 .footer-sections {
 display: flex;
 flex-direction: column;
